--- a/OneWiki/data/Evil Session 2 Notes.wiki
+++ b/OneWiki/data/Evil Session 2 Notes.wiki
@@ -1,5 +1,5 @@
 ﻿++ Evil Session 2 Notes
 
-The crew had supplied food to tide over the refugee camp for a few days before they persuaded the Marines to let them join along when they departed.
+The crew had supplied food to tide over the refugee camp for a few days before they persuaded the [Marines] to let them join along when they departed.
 
-Edan started a fight that resulted in the death of the [Golden Hand] mercenary band that helped the refugee camp, as well as losing [Renegade Leader Kelsier] in the process.
+[Edan] started a fight that resulted in the death of the [Golden Hand] mercenary band that helped the refugee camp, as well as losing [Renegade Leader Kelsier] in the process.
