--- a/OneWiki/data/Session 4 Notes.wiki
+++ b/OneWiki/data/Session 4 Notes.wiki
@@ -8,3 +8,4 @@ players saught audience with the King, stated that it was of great importance, t
 
 They got the bounty on the Griffin increased to 40g by talking with Ghan Bopps, the livestock merchant.
  
+In the night, they ran into an arrogant member of the carpenters guild and decided to break into the second floor of the guild, steal some tools, let loose a fire beetle, and steal their guild's sign in front of the building. 
