--- a/OneWiki/data/Ak%27anon.wiki
+++ b/OneWiki/data/Ak%27anon.wiki
@@ -1,3 +1,67 @@
 ﻿++ Ak'anon
 
 good Ak'anon music: https://www.youtube.com/watch?v=_-fkM4K_26U
+
+Ak'anon is a busy bustling city of gnomes. It once, long ago started as a small island, and their mechanations and city expanded to encompass the entire island until there was no more land visible. It's a very busy and bustling place, the shape of the city often changes from day to day as mechanisms shift things around, but and local gnome is well accustomed. Foreigners tend to have difficulty navigating, especially since most things are sized for gnome usage.
+
+The small island that Ak'anon is built upon has been turned into a mine that many rare metals are mined from. Including trace amounts of a [Materials] called Dimeritium. The magical properies of it power much of the city as well as small devices that are invented and crafted here.
+
+When an expected ship arrives to Ak'anon, the city can open up to reveal the internalized port for docking vessels.
+
+Ak'anon is well guarded by cannons and high walls. 
+
+Ak'anon is not lead by a single ruler, but a council of influencial individuals.
+    -Calwin (F), master shipwright and head of international trade
+    -Bribis (F), master smelter and head of mining operations
+    -Lanziver (M), architect of city construction
+    -Zilkas (M), master of dimeritium constructs and machinery
+    -Ummorn (M), leader of defence and security
+    -Briyur (F), master of the arts
+    -Sellys (F), head provisions organizer
+    
+Ak'anon has no wildlife, as there is no "wilderness"    
+    
+There are many points of interest in Ak'anon:
+-The Giant's Peak (bar/inn for travelers) - no food
+    -8s per night ( comfortable )
+    -common wine - 2s
+    -fine wine - 10g
+    -ale - 2s
+-Bottled Inginuity (bar/inn for local gnomes) - food
+    -common wine - 2s
+    -ale - 2s
+    -see below food vendors for food
+-Food vendors
+    -fish - 5cp per lb
+    -imported vegetables - 
+    -imported meats - 3sp per lb
+    -imported cheese - 1sp per lb
+-Inventor's shop
+    - glass orb with clockwork fish (wind up) - 10g
+    - music box (lacy melody) - 15g
+    - brass keyed accordion (+1 CHA when playing music) - 10g
+    - steel lock boxes (25 lb) - 20g
+    - scale model of Ak'anon, with movable parts! - 15g
+    - telescope - 5g
+-Crafting [Materials] shop
+    -imported wood - 1s per board 
+    -glass - 1g per pound
+    -mined silver - 5g per pound
+    -mined copper - 5s per pound
+    -mined iron - 1s per pound
+    -mined tin - 1s per pound
+    -mined zinc - 5s per pound
+    -smelted bronze - 1g per pound
+    -smelted brass - 2g per pound
+-Crafting Tools shop
+    -Carpenter's Tools - 8g
+    -Cartographer's Tools - 15g
+    -Cobbler's Tools - 5g
+    -Glassblower's Tools - 30g
+    -Jeweler's Tools - 25g
+    -Leatherworker's Tools - 5g
+    -Mason's Tools - 10g
+    -Smith's Tools - 20g
+    -Tinker's Tools - 50g
+    -Weaver's Tools - 1g
+    -Woodcarver's Tools - 1g
