--- a/OneWiki/data/Towns.wiki
+++ b/OneWiki/data/Towns.wiki
@@ -6,9 +6,9 @@ Impell Down (One Piece prison)
 Nightbrook  (mind games, nightvale)
 [Elbaf]  (one piece land of giants) 
 [Alexandria]  (huge trade center, library)
-[Arabasta] (large desert island)
+[Arabasta]
 [Dun Morhen] 
-[Ak'anon] (city of invention)
+[Ak'anon]
 [Odus] (Camp of refugees from Luthadel) 
 
 [Norrath]
