--- a/OneWiki/data/Kunark.wiki
+++ b/OneWiki/data/Kunark.wiki
@@ -2,6 +2,10 @@
 
 Home land of the Iksar and Koloss. Region that [Luthadel] and [Kalas] is located.
 
+Other regions of interest include 
+    -[Mines of House Zasheir]
+    -[Plantation of House Zolis]
+
 Wildlife of Kunark (monster manual): 
     [Mistwraith] (use flesh golem pg 169)
         Only comes out in the night during the mists, can't be found during the day.
