--- a/OneWiki/data/Quests.wiki
+++ b/OneWiki/data/Quests.wiki
@@ -6,6 +6,14 @@ GOOD group
 
 [Session 3 Notes]
 [Session 4 Notes]
+Session 5 Notes:
+They got audience with the [King Jor Doken], and provided the music box and banner of [Luthadel] to him. He failed to see significance of the music box, and was curious about the story behind the banner, and suggested he would be willing to accept another audience with the party to hear the story.
+
+The group checked in with the aftermath of their vandalism of the Carpenter's guild, and attempted to sow the seeds of trouble by claiming the Mason's Guild was responsible. Showing a pulley they claimed to have found at the site of the incident as evidence.
+
+They then set out to their boat, through the woods they first encountered the elk from the night before looking for food again, but upon back tracking, it had been attacked by wolves, which they then faught a difficult battle and triumphed over. They hauled much meat back to their ship and reviewed their belongings.
+
+They noticed the mummified arm of [Tharizdun] had re-merged together, and promptly chopped it into more pieces in response. They also spent two more days trying to brute force the safe open, and finally succeed. [Kieran Maon] ended up eating the fruit inside, obtain a smelly power of sorts and a lack of tolerance for salt water.
 
 
 EVIL group
