adding evil session notes

--- a/OneWiki/data/Quests.wiki
+++ b/OneWiki/data/Quests.wiki
@@ -19,3 +19,14 @@ They noticed the mummified arm of [Tharizdun] had re-merged together, and prompt
 EVIL group
 
 [Evil Session 2 Notes]
+
+Evil Session 3 Notes:
+the group set sail, west to wherever the [Marines] were headed. They commandered the boat from them via murder, and also killed the fugitive [Redbeard The Unlucky] that they had on board.
+
+The next day, they broke out of the fog into a clear day, where they unfortunately encountered a boat of [Don Kreig]'s men that has just ransacked [Augsburg], on board, they had the pirsoner [Dockson], a halfling smuggler who was responsible for getting the help from the [Golden Hand], though, he fell in trouble with [Don Kreig]'s men when they overheard him talking of the heist [Renegade Leader Kelsier] had done against a noble house of [Luthadel] 
+
+Slaves: Kerri Anton
+Bandit survivor: slain
+[Dockson]: Befriended
+Reminder: [Cael Caemond] do level up - abilities - HP
+sold boat for 2400
