--- a/OneWiki/data/Order of the Gauntlet.wiki
+++ b/OneWiki/data/Order of the Gauntlet.wiki
@@ -2,3 +2,5 @@
 
 A division of the marines whose members are strong individuals that choose to work solo instead of with a band of fellow [Marines]
 They are given the priviledge to wander as they see fit to take justice into their own hands, symbolized by a Gauntlet.
+
+[Letho]- Massive 7-foot tall man
