--- a/OneWiki/data/Quests.wiki
+++ b/OneWiki/data/Quests.wiki
@@ -23,7 +23,8 @@ They noticed the mummified arm of [Tharizdun] had re-merged together, and prompt
 
 +++EVIL CALENDAR
 1234567
-X
+XXXXXXX
+XXXXX
 +++EVIL group
 
 ++++Evil Session 2 Notes:
@@ -42,3 +43,17 @@ Bandit survivor: slain
 Reminder: [Cael Caemond] do level up - abilities - HP
 sold boat for 2400
 Dockson quoted slaves at 40g to pirates
+
+++++Session 4 notes:
+story to marine officers of mayara:
+redbeard probably overthrew the marine boat and murdered them, then went on to join Don Krieg's men. They attacked the party five days east of Fiore. Badges have been returned. 
+
+Edan gives his name with Elisha the exotic food vendor.
+
+slew the snoody carpenter's guild member.
+
+11 HP, proficiency: spears +2
+slave training days: XXXXXXX
+                     XXX
+
+40 population of refugee camp now - SLAUGHTERED
