adding notes from good session 6

--- a/OneWiki/data/Characters.wiki
+++ b/OneWiki/data/Characters.wiki
@@ -5,6 +5,7 @@ Pirates:
 [Redbeard The Unlucky]
 [Rex The Smasher]
 [Varneth]
+[Rumbar Pirates]
 
 Legendary Heroes:
 [Regdar]
@@ -32,5 +33,3 @@ World Leathers:
 [Odus]
     [Renegade Leader Kelsier]
 
-NPC:
-[Daniel]
