--- a/OneWiki/data/Fiore.wiki
+++ b/OneWiki/data/Fiore.wiki
@@ -66,7 +66,7 @@ Places of interest in Mayara:
             items for sale include bananas, kiwi, cheese, grapes, cave cricket on a stick. (8sp per item (counts as a meal))          
         -flectcher, Yanny McLougin (female halfling), redneckish personality
             items for sale short bow (25g), long bow(50g), arrows (20x 1g)
-        -animal vendor, Ghan Bopps (dwarf) a bit smelly, but otherwise very nice, has a wanted poster out for the Fiore Griffin with the [Marines]
+        -animal vendor, Ghan Bopps (dwarf) a bit smelly, but otherwise very nice, has a wanted poster out for the Fiore Griffin with the [Marines] - 436 Gold
             2cp x lb of chicken (1d6) (5 at stall)
             1gp per goat (2 at stall)
             3gp per pig (2 at stall)
