--- a/OneWiki/data/Venril Sathir.wiki
+++ b/OneWiki/data/Venril Sathir.wiki
@@ -5,12 +5,13 @@ A very oppressive king who has undergone dragon mutations as well as having cons
 His very existence is for perpetuating the seal he has on the god [Gruumsh] through a synergystic process of using his own
 etherium existence to both extend his own life as well as power the seal.
 
-STR 20, DEX 20, CON 20, WIS 16, INT 16, CHA 12
+STR 20, DEX 20, CON 20, WIS 16, INT 16, CHA 12      SPELL SAVE DC   SPELL CAST ABILITY    SPELL ATTACK BONUS 
+    +5      +5      +5      +3      +3      +1                 20                   +6                    +6
 
-170hp
+250hp
 AC 18+3 God King's Platemail (req str 16)
 Ring of Spell Storing x5 (one spell each) (pg 192 DM handbook)
-Ring of Telekinesis
+Ring of Telekinesis (pg 280 player handbook)
 Ring of Regeneration (pg 191 DM handbook) +1d6 HP per 10 minutes, body parts can regrow after a few days
 Ring of Jumping
 Rapier 1d8+5(+7 to hit)
@@ -22,6 +23,11 @@ Detect Magic
 Dispell Magic (pg 234 player handbook)
 Dispell Good
 Speak with Dead
+
+Abilities:
+Ethereal vision, can see into the ethereal plane.
+Ethereal presence, can interact with spirits as if they were material.
+
 
 Akumafruit:
 Etherium element
