adding evil session notes

--- a/OneWiki/OneWiki.wiki
+++ b/OneWiki/OneWiki.wiki
@@ -5,7 +5,7 @@ data_dir = data
 wikiwidehistory_maxentries = 100
 footnotes_as_wikiwords = False
 indexsearch_enabled = False
-last_wiki_word = Dun Morhen
+last_wiki_word = Letho
 hotkey_showhide_bywiki = 
 log_window_autoshow = Gray
 filestorage_identity_filenamemustmatch = False
@@ -28,7 +28,7 @@ wiki_lasttabssubctrls = textedit
 template_pagenamesre = ^template/
 wikipagetitle_creationmode = 1
 tabhistory_maxentries = 25
-tree_expandednodes_descriptorpathes_main = wikipage/OneWiki,wikipage/Towns,wikipage/Norrath,wikipage/Luthadel,wikipage/Norrath,wikipage/Kunark;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of the Gauntlet,wikipage/Letho;wikipage/OneWiki,wikipage/AkumaFruits;wikipage/OneWiki,wikipage/Towns,wikipage/Norrath,wikipage/Luthadel;wikipage/OneWiki,helpernode/main/view,helpernode/propcategory/,helpernode/propcategory/global,helpernode/propcategory/global.contact,helpernode/propcategory/global.contact.icon;wikipage/OneWiki,wikipage/Towns,wikipage/Dun Morhen,wikipage/Nifle Vanhivener;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Characters;wikipage/OneWiki,wikipage/Towns,wikipage/Norrath,wikipage/Luthadel,wikipage/Norrath;wikipage/OneWiki,wikipage/Towns,wikipage/Fiore,wikipage/Marines,wikipage/Fiore;wikipage/OneWiki,helpernode/main/view,helpernode/propcategory/,helpernode/propcategory/global;wikipage/OneWiki,wikipage/Organizations;wikipage/OneWiki,wikipage/Gods,wikipage/Kord,wikipage/Arabasta;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Kunark;wikipage/OneWiki,wikipage/Quests,wikipage/Marines,wikipage/Order of the Gauntlet;wikipage/OneWiki,wikipage/Towns,wikipage/Fiore,wikipage/Marines;wikipage/OneWiki,wikipage/Towns,wikipage/Odus,wikipage/AkumaFruits;wikipage/OneWiki,wikipage/Gods;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Order of Steel;wikipage/OneWiki;wikipage/OneWiki,wikipage/Organizations,wikipage/Marines;wikipage/OneWiki,wikipage/Towns;wikipage/OneWiki,wikipage/Towns,wikipage/Dun Morhen,wikipage/Luthadel;wikipage/OneWiki,helpernode/main/view,helpernode/propcategory/,helpernode/propcategory/global,helpernode/propcategory/global.contact;wikipage/OneWiki,wikipage/Items of Importance;wikipage/OneWiki,helpernode/main/view,helpernode/propcategory/,helpernode/propcategory/global,helpernode/propcategory/global.contact,helpernode/propcategory/global.contact.icon,helpernode/propvalue/global.contact.icon/contact
+tree_expandednodes_descriptorpathes_main = wikipage/OneWiki,wikipage/Towns,wikipage/Norrath,wikipage/Luthadel,wikipage/Norrath,wikipage/Kunark;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of the Gauntlet,wikipage/Letho;wikipage/OneWiki,wikipage/Organizations,wikipage/Marines,wikipage/Fiore;wikipage/OneWiki,wikipage/Towns,wikipage/Norrath,wikipage/Luthadel;wikipage/OneWiki,helpernode/main/view,helpernode/propcategory/,helpernode/propcategory/global,helpernode/propcategory/global.contact,helpernode/propcategory/global.contact.icon;wikipage/OneWiki,wikipage/Towns,wikipage/Dun Morhen,wikipage/Nifle Vanhivener;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Towns,wikipage/Norrath,wikipage/Luthadel,wikipage/Norrath;wikipage/OneWiki,wikipage/Towns,wikipage/Fiore,wikipage/Marines,wikipage/Fiore;wikipage/OneWiki,helpernode/main/view,helpernode/propcategory/,helpernode/propcategory/global;wikipage/OneWiki,wikipage/Organizations;wikipage/OneWiki,wikipage/Gods,wikipage/Kord,wikipage/Arabasta;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Kunark;wikipage/OneWiki,wikipage/Quests,wikipage/Marines,wikipage/Order of the Gauntlet;wikipage/OneWiki,wikipage/Towns,wikipage/Fiore,wikipage/Marines;wikipage/OneWiki,wikipage/Towns,wikipage/Odus,wikipage/AkumaFruits;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Order of Steel;wikipage/OneWiki;wikipage/OneWiki,wikipage/Organizations,wikipage/Marines;wikipage/OneWiki,wikipage/Towns;wikipage/OneWiki,wikipage/Towns,wikipage/Dun Morhen,wikipage/Luthadel;wikipage/OneWiki,helpernode/main/view,helpernode/propcategory/,helpernode/propcategory/global,helpernode/propcategory/global.contact;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of the Gauntlet;wikipage/OneWiki,wikipage/Organizations,wikipage/Marines,wikipage/Order of the Gauntlet;wikipage/OneWiki,wikipage/Quests;wikipage/OneWiki,helpernode/main/view,helpernode/propcategory/,helpernode/propcategory/global,helpernode/propcategory/global.contact,helpernode/propcategory/global.contact.icon,helpernode/propvalue/global.contact.icon/contact;wikipage/OneWiki,wikipage/Towns,wikipage/Fiore
 wiki_wikilanguage = wikidpad_default_2_0
 tree_force_scratchpad_visibility = True
 further_wiki_words = 
