--- a/OneWiki/data/Kerri.wiki
+++ b/OneWiki/data/Kerri.wiki
@@ -8,4 +8,4 @@ Kerri's fiance in [Augsburg]:
 8 HP, proficiency: medicine 
 AC 11 - padded
 
-slave training days : XXXXX
+slave training days : XXXXXX
