adding good session notes

--- a/OneWiki/data/Geth.wiki
+++ b/OneWiki/data/Geth.wiki
@@ -3,3 +3,5 @@
 A very happy pleasant fellow who is a cartographer that has lived in town for a long time and is quick to spot newcomers to sell is town maps to.
 
 He is also the cartographer contracted by [Redbeard The Unlucky] who produced a map of [Fiore] to [Augsburg]
+
+Joined the good group. 
