--- a/OneWiki/data/Quests.wiki
+++ b/OneWiki/data/Quests.wiki
@@ -21,6 +21,11 @@ They noticed the mummified arm of [Tharizdun] had re-merged together, and prompt
   pre-game notes: cross-game changes, another boat being worked on at the north dock via evil group.
   -the group has slain the Griffin Ghan Bopps requested killed, and are entitled to 40 gold  
 
+++++Session 7:
+  intimidated Ghan Bopps into giving 60 gold for the gryphon.
+  sold 100 gryphon feathers to yanny at 1s each
+  
+
 +++EVIL CALENDAR
 1234567
 XXXXXXX
